# Assay

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/actions/assay-gate/: action.yml
.github/workflows/: ci.yml  example-gate.yml
docs/: index.html  judge_explorer.json  judge_pointwise.json  plan.html  survey.md
examples/: README.md  gate_baseline.jsonl  gate_candidate.jsonl  gsm8k_frozen.jsonl  irt_outcomes.jsonl  irt_truth.json  make_fixtures.py  sample_lm_eval.jsonl
notebooks/: assay_walkthrough.ipynb
results/: README.md  check_mmlu_fixture.json  mde_table.csv  reconcile_gsm8k.json  summary.json
results/judge/: README.md  arena_pool.json  it0_verdicts.json  it2_verdicts.json  it5_verdicts.json  judge_report.json  report.json  verdicts.jsonl
results/judge_full/: items.json
results/judge_full/chunks/: chunk_00.jsonl  (+9 more)
results/judge_pointwise/: items.json  parse_and_append.py  raw_p001.json  report.json
results/real_data/: gsm8k_platinum_diff.json  mmlu_redux_configs.json  mmlu_redux_errors.json
results/scrape/: mmlu_redux_page.md
results/survey/: serper_scholar.json  you_research.json
results/tako/: judge_position_bias_card.json
scripts/: analyze_judge.py  analyze_pointwise.py  run_judge_study.py
src/: __init__.py  cli.py  gate.py  irt.py  judge.py  provenance.py  stats.py
src/assay/: check.py  schema.py  stats.py
src/ingest/: __init__.py
src/reconcile/: extractors.py  gsm8k.py
tests/: test_dist_stats.py  test_gate.py  test_ingest.py  test_irt.py  test_judge.py  test_provenance.py  test_reconcile.py  test_stats.py
(+18 files in other folders)
