[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assay-evals"
version = "0.1.0"
description = "The noise floor for LLM evals: clustered error bars, paired tests, an MDE gate, and a cross-harness reconciler for the logs your harness already writes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aravind Kannappan" }]
keywords = ["llm", "evaluation", "benchmarks", "statistics", "reproducibility", "metrology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14"]
dev = ["pytest>=7", "pyarrow>=14"]

[project.urls]
Homepage = "https://github.com/aravinds-kannappan/NoiseFloor"
Repository = "https://github.com/aravinds-kannappan/NoiseFloor"

[project.scripts]
assay = "assay.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
